XNAT-5546 XXX-96 Simplify display handling of custom variable values. Fix inadvertent spacing issue.

--- a/src/main/webapp/style/app.css
+++ b/src/main/webapp/style/app.css
@@ -2070,9 +2070,11 @@ div.containerTitle.withColor {
 .formLabel,
 .formLabelRequired,
 .formSublabel {
-    min-width: 140px;
     text-align: left;
     white-space: nowrap;
+}
+form .formLabel {
+    min-width: 100px;
 }
 
 .formLabelRequired b {
